fix transitions on firefox main page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,9 +75,9 @@ body,
   right: 0;
 }
 
-.slideshow-slide {
+/* .slideshow-slide {
   transition: background-image 1s ease-in-out;
-}
+} */
 
 .motion-frame {
   position: relative;
